feat: load VSDK script

--- a/app/views/zoom/video_session.html.erb
+++ b/app/views/zoom/video_session.html.erb
@@ -5,8 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://source.zoom.us/uitoolkit/2.2.0-2/videosdk-ui-toolkit.css" />
   <script src="https://source.zoom.us/uitoolkit/2.2.0-2/videosdk-ui-toolkit.min.umd.js"></script>
+  <script src="https://source.zoom.us/videosdk/zoom-video-2.2.0.min.js"></script>
   <script>
     const uitoolkit = window.UIToolkit;
+    const zoomVideoSDK = window.WebVideoSDK.default;
+    console.log("uitoolkit", uitoolkit);
+    console.log("zoomVideoSDK", zoomVideoSDK);
   </script>
 </head>
 <body>
