--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <main class="container mx-auto px-5 flex">
+    <main class="container mx-auto px-5 flex flex-col">
       <%= yield %>
     </main>
   </body>
